JumpScript/tests/baselines/reference/parserEqualsGreaterThanAfterFunction2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.jump(1,10): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.jump(1,13): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.jump(1,17): error TS1005: ',' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.jump(1,18): error TS1005: ')' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction2.jump (4 errors) ====
    function (a => b;
             ~
!!! error TS1003: Identifier expected.
                ~~
!!! error TS1005: ',' expected.
                    ~
!!! error TS1005: ',' expected.
                     
!!! error TS1005: ')' expected.